fix(dark theme): solve contrast issue on background hover

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,7 +59,7 @@ html {
 		--dialog-headline-color: #47b00a;
 		--dialog-background-color: #1b1b1b;
 		--dialog-border-color: #2f444d;
-		--dialog-background-color-hover: #2f444d;
+		--dialog-background-color-hover: #272727;
 		--card-layout-color-border: #353535;
 		--main-content-text-color: #ddd;
 		--main-content-text-color-muted: #959494;
